2002-12-14  Corinna Vinschen  <corinna@vinschen.de>

	* netdb.cc: Remove strtok_r comment.

2002-12-14  Pierre Humblet  <pierre.humblet@ieee.org>

	* security.cc (get_user_local_groups): Use LookupAccountSid to find the
	local equivalent of BUILTIN.

2002-12-14  Christopher Faylor  <cgf@redhat.com>

	* pipe.cc (make_pipe): Set fork fixup flag for read pipe.

2002-12-14  Christopher Faylor  <cgf@redhat.com>

	* winbase.h: Turn on inline versions of Interlocked* by default.

2002-12-14  Gary R. Van Sickle <g.r.vansickle@worldnet.att.net>

	* winbase.h: Fixup inline asm functions.  Add ilockcmpexch.

2002-12-13  Christopher Faylor  <cgf@redhat.com>

	Throughout, change fhandler_*::read and fhandler_*::raw_read to void
	functions whose second arguments are both the lenght and the return
	value.
	* fhandler.cc (fhandler_base::read): Rework slightly to use second
	argument as input/output.  Tweak CRLF stuff.
	(fhandler_base::readv): Accommodate fhandler_*::read changes.
	* cygthread.h (cygthread::detach): Declare as taking optional handle
	argument.
	(cygthread::detach): When given a handle argument, wait for the handle
	to be signalled before waiting for thread to detach.  Return true when
	signal detected.

2002-12-12  Corinna Vinschen  <corinna@vinschen.de>

	* Makefile.in: Add MINGW_LDFLAGS when linking cygrun.exe.

2002-12-10  Christopher Faylor  <cgf@redhat.com>

	* cygthread.h (cygthread::stack_ptr): New element.
	(cygthread::detach): Accept a "wait_for_signal" argument.
	(cygthread::terminate_thread): New function.
	* cygthread.cc (cygthread::stub): Set stack pointer argument.
	(cygthread::terminate_thread): New function.  Forcibly terminate
	thread.
	(cygthread::detach): Optionally wait for signals and kill thread when
	signal arrives.
	* exceptions.cc (signal_exit): Set signal_arrived prior to exiting to
	wake up anything blocking on signals.
	* fhandler.h (fhandler_base::set_r_no_interrupt): Change to accept bool
	argument.