@@ -48,18 +48,37 @@ SID_IDENTIFIER_AUTHORITY sid_auth[] = {
 	{SECURITY_NT_AUTHORITY}
 };
 
-cygsid well_known_null_sid ("S-1-0-0");
-cygsid well_known_world_sid ("S-1-1-0");
-cygsid well_known_local_sid ("S-1-2-0");
-cygsid well_known_creator_owner_sid ("S-1-3-0");
-cygsid well_known_dialup_sid ("S-1-5-1");
-cygsid well_known_network_sid ("S-1-5-2");
-cygsid well_known_batch_sid ("S-1-5-3");
-cygsid well_known_interactive_sid ("S-1-5-4");
-cygsid well_known_service_sid ("S-1-5-6");
-cygsid well_known_authenticated_users_sid ("S-1-5-11");
-cygsid well_known_system_sid ("S-1-5-18");
-cygsid well_known_admins_sid ("S-1-5-32-544");
+cygsid well_known_null_sid;
+cygsid well_known_world_sid;
+cygsid well_known_local_sid;
+cygsid well_known_creator_owner_sid;
+cygsid well_known_creator_group_sid;
+cygsid well_known_dialup_sid;
+cygsid well_known_network_sid;
+cygsid well_known_batch_sid;
+cygsid well_known_interactive_sid;
+cygsid well_known_service_sid;
+cygsid well_known_authenticated_users_sid;
+cygsid well_known_system_sid;
+cygsid well_known_admins_sid;
+
+void
+cygsid::init ()
+{
+  well_known_null_sid = "S-1-0-0";
+  well_known_world_sid = "S-1-1-0";
+  well_known_local_sid = "S-1-2-0";
+  well_known_creator_owner_sid = "S-1-3-0";
+  well_known_creator_group_sid = "S-1-3-1";
+  well_known_dialup_sid = "S-1-5-1";
+  well_known_network_sid = "S-1-5-2";
+  well_known_batch_sid = "S-1-5-3";
+  well_known_interactive_sid = "S-1-5-4";
+  well_known_service_sid = "S-1-5-6";
+  well_known_authenticated_users_sid = "S-1-5-11";
+  well_known_system_sid = "S-1-5-18";
+  well_known_admins_sid = "S-1-5-32-544";
+}
 
 char *
 cygsid::string (char *nsidstr) const
